msx/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fastapi-app
spec:
  selector:
    app: my-fastapi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
